Projeto Cordel Finalizado

--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -12,7 +12,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 
+    
 }
 
 html, body {
@@ -32,7 +32,7 @@ header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 5vw;
+    font-size: 5em;
 }
 
 header > p {
@@ -55,7 +55,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 2.5vw;
+    font-size: 2em;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 
@@ -67,14 +71,28 @@ section.normal {
 section.imagem {
     background-color: rgb(70, 68, 68);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.295);
+    background-color: rgba(0, 0, 0, 0.507);
+    text-shadow: 3px 2px 2px black;
 }
 
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    
+}
 
 footer {
     background-color: black;
